Hipervinculos relativos y absolutos

--- a/pw1/primero.html
+++ b/pw1/primero.html
@@ -1,39 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Encabezados y Párrafos</title>
+        <title> Tarea #1</title>
         <meta charset="utf-8"/>
     </head>
     <body>
-        <h1 id="titulo">Encabezados (Heading 1)</h1>
+        <h1>Universidad Catolica de Honduras (Estudiante)</h1>
         <p>
-            <a href="#intro">Introducción</a>
-            <br/>
-            <a href="#Antipatrones">Antipatrones en el uso Blockhain</a>
+            <a href="#informacion">Alunma de ICC</a>
             <br/>
         </p>
-        <h2 id="intro">Introducción</h2>
-        <p>esto es para separar parrafos de textos</p>
-        <p>como asi</p>
-        <h2>Blockhains ¿Qué es?</h2>
-        <p>esto es para separar parrafos de textos</p>
-        <p>como asi</p>
-        <h3>Whitepaper de Bitcoin Satoshi</h3>
-        <p>esto es para separar parrafos de textos</p>
-        <p>como asi</p>
-        <h3>Registro inmutable y distribuido</h3>
-        <p>esto es para separar parrafos de textos</p>
-        <p>como asi</p>
-        <h4>Caracteristicas</h4>
-        <h2>Infraestructura que sorporta Blockhain</h2>
-        <h2>Aplicaciones Prácticas para el uso de Blockhain</h2>
-        <h2 id="Antipatrones">Antipatrones en el uso de Blockhain</h2>
-        <p>fhbdfhdbfhfdbgkfbgkbgkfgkfbgkdfhbgkfbgkhdfbgkhfbgkhfgfgfgfh
-            fgfkhgfkgfkgkfghfhghfkghfhkgfdkh
-        </p>
-        <h2 id="que_son">Blockhain no es solo Crypto</h2>
-        <p>esto es para separar parrafos de textos</p>
-        <p>como asi</p>
-        <h2>Conclusiones</h2>
+        <h2 id="informacion">Alumna de ICC</h2>
+        <p>Josselin Johana Pineda Romero </p>
+        <p>0801-1998-06292</p>  
+        <p>josselinpineda75@gmail.com</p>
     </body>
 </html>
