--- a/pw1/index.html
+++ b/pw1/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8"/>
     </head>
     <body>
+         <!-- anclaje--> 
         <h1 id="titulo">Encabezados (Heading 1)</h1>
         <p>
             <a href="#intro">Introducción</a>
@@ -36,6 +37,7 @@
         <p>como asi</p>
         <h2>Conclusiones</h2>
         <p>
+        <!-- hipervinvulos relativos--> 
             <a href="primero.html">Ir a Primero</a>
             <a href="a/a.html">Ir a A</a>
             <a href="b/b.html">Ir a B</a>
@@ -44,6 +46,7 @@
         </p>
         <h2>Referencias</h2>
         <p>
+             <!-- hipervinvulos absolutos--> 
             <a href="https://github.com/josselinPineda" target="_blank"> ir a GitHub</a>
             <a href="https://google.com" target="_blank">Ir a Google </a>
         </p>
